--- a/lb3_ultramegalast.html
+++ b/lb3_ultramegalast.html
@@ -11,11 +11,48 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis id, ex facilis ab, temporibus recusandae dolore ratione exercitationem, enim atque repellendus ut! Tenetur repudiandae nam, nulla distinctio, quam aliquam corrupti aspernatur eveniet porro excepturi fuga aliquid. Aliquam, molestiae impedit cum perspiciatis velit minima accusamus dolore. Suscipit, deleniti quibusdam perferendis dignissimos illo nostrum esse. Labore repellat itaque a omnis? Animi iusto aspernatur quis aliquid. Vel obcaecati totam, tempora, vitae recusandae quos ullam sapiente exercitationem mollitia libero ad sequi repellat accusantium alias voluptas odio maiores. Aliquid, mollitia laboriosam aperiam repudiandae expedita eum quas inventore laborum facilis commodi assumenda a officia nulla velit.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis id, ex facilis ab, temporibus recusandae dolore ratione exercitationem, enim atque repellendus ut! Tenetur repudiandae nam, nulla distinctio, quam aliquam corrupti aspernatur eveniet porro excepturi fuga aliquid. Aliquam, molestiae impedit cum perspiciatis velit minima accusamus dolore. Suscipit, deleniti quibusdam perferendis dignissimos illo nostrum esse. Labore repellat itaque a omnis? Animi iusto aspernatur quis aliquid. Vel obcaecati totam, tempora, vitae recusandae quos ullam sapiente exercitationem mollitia libero ad sequi repellat accusantium alias voluptas odio maiores. Aliquid, mollitia laboriosam aperiam repudiandae expedita eum quas inventore laborum facilis commodi assumenda a officia nulla velit.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis id, ex facilis ab, temporibus recusandae dolore ratione exercitationem, enim atque repellendus ut! Tenetur repudiandae nam, nulla distinctio, quam aliquam corrupti aspernatur eveniet porro excepturi fuga aliquid. Aliquam, molestiae impedit cum perspiciatis velit minima accusamus dolore. Suscipit, deleniti quibusdam perferendis dignissimos illo nostrum esse. Labore repellat itaque a omnis? Animi iusto aspernatur quis aliquid. Vel obcaecati totam, tempora, vitae recusandae quos ullam sapiente exercitationem mollitia libero ad sequi repellat accusantium alias voluptas odio maiores. Aliquid, mollitia laboriosam aperiam repudiandae expedita eum quas inventore laborum facilis commodi assumenda a officia nulla velit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis id, ex facilis ab, temporibus recusandae dolore ratione exercitationem, enim atque repellendus ut! Tenetur repudiandae nam, nulla distinctio, quam aliquam corrupti aspernatur eveniet porro excepturi fuga aliquid. Aliquam, molestiae impedit cum perspiciatis velit minima accusamus dolore. Suscipit, deleniti quibusdam perferendis dignissimos illo nostrum esse. Labore repellat itaque a omnis? Animi iusto aspernatur quis aliquid. Vel obcaecati totam, tempora, vitae recusandae quos ullam sapiente exercitationem mollitia libero ad sequi repellat accusantium alias voluptas odio maiores. Aliquid, mollitia laboriosam aperiam repudiandae expedita eum quas inventore laborum facilis commodi assumenda a officia nulla velit.</p>
+    <p>Lorem alskdfj alskdfjl.</p>
     <script>
-        let body = document.getElementsByTagName("body")[0];
+        let body = document.getElementsByTagName("p");
+        coverLastWordWithSpan();
 
         
+        function disapear()
+        {
+            document.getElementById("spanstring").style.opacity = "1"
+            let interval = setInterval(()=>
+            {
+                if (document.getElementById("spanstring").style.opacity == "0") 
+                {
+                    deleteLastElement();
+                    clearInterval(interval);
+                }
+                let opacity = Number(document.getElementById("spanstring").style.opacity) - 0.05;
+                document.getElementById("spanstring").style.opacity = opacity;
+            }, 100)
+        }
+
+        function coverLastWordWithSpan()
+        {
+            let string = body[body.length - 1].innerHTML;
+            let arr = string.split(' ');
+            arr[arr.length - 1] = "<span id=\"spanstring\">" + arr[arr.length - 1] + "</span>"; 
+
+            body[body.length - 1].innerHTML = arr.join(" ");
+            disapear();
+            // console.log(body.children[body.children.length - 1].innerHTML);
+        }
+
+        function deleteLastElement()
+        {
+            let string = body[body.length - 1].innerHTML;
+            let arr = string.split(' ');
+            arr.splice(-4); 
+            body[body.length - 1].innerHTML = arr.join(" ");
+            if (body[body.length - 1].innerHTML.length == 0) body[body.length - 1].remove();
+            if (body.length == 0) return;
+            coverLastWordWithSpan();
+        }
     </script>
 </body>
 </html>
